dark mode bug fix

--- a/app/output.css
+++ b/app/output.css
@@ -674,6 +674,10 @@ video {
   bottom: 9rem;
 }
 
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -764,22 +768,6 @@ video {
 
 .top-96 {
   top: 24rem;
-}
-
-.bottom-4 {
-  bottom: 1rem;
-}
-
-.bottom-7 {
-  bottom: 1.75rem;
-}
-
-.bottom-56 {
-  bottom: 14rem;
-}
-
-.bottom-5 {
-  bottom: 1.25rem;
 }
 
 .z-0 {
@@ -874,11 +862,6 @@ video {
 .my-5 {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
-}
-
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
 }
 
 .mb-1 {
@@ -1878,11 +1861,6 @@ video {
 .text-purple-900 {
   --tw-text-opacity: 1;
   color: rgb(88 28 135 / var(--tw-text-opacity));
-}
-
-.text-red-400 {
-  --tw-text-opacity: 1;
-  color: rgb(248 113 113 / var(--tw-text-opacity));
 }
 
 .text-red-500 {
